--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-	"axios": "^1.6.7",
-    "mongodb": "^6.3.0",  
+    "axios": "^1.7.9",
+    "mongodb": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "sha256": "^0.2.0",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
